ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /user(/|$)(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - pathType: Prefix
            path: /catalog(/|$)(.*)
            backend:
              service:
                name: catalog-service
                port:
                  number: 80
          - pathType: Prefix
            path: /order(/|$)(.*)
            backend:
              service:
                name: order-service
                port:
                  number: 80
